2001-11-10  Robert Collins  <rbtcollins@hotmail.com>

	* include/winnt.h: Add Danny Smith's text comment about gcc compiler warnings
	with _AUTHORITY #defines.

2001-11-09  Robert Collins  <rbtcollins@hotmail.com>

	* include/winnt.h (GetCurrentFiber): Create a prototype before the implementation;
	(GetFiberData): Ditto.

2001-11-09  Robert Collins  <rbtcollins@hotmail.com>

	* include/winnt.h: Backout last change.

2001-11-08  Robert Collins  <rbtcollins@hotmail.com>

	* include/winnt.h: Define *_SID_AUTHORITY appropriately. (nested
	structures.)
	GetCurrentFiber: Create a prototype before the implementation;
	GetFiberData: Ditto.

2001-11-04  Christopher Faylor  <cgf@redhat.com>

	* lib/Makefile.in: Add .NOTPARALLEL target since dlltool cannot run in
	parallel invocations.

2001-11-03  Christopher Faylor  <cgf@redhat.com>

	* lib/scrnsave.c (WinMain): Trivial change to avoid a compiler warning.

2001-11-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/basetyps.h (DECLARE_INTERFACE): Don't add
	__attribute__((com_interface)) for __GNUC__ >= 3. 

2001-11-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commdlg.h (PRINTPAGERANGE): Add structure
	definition.
	(PRINTDLGEX[AW]): Likewise.
	(PrintDlgEx[AW]): Add function declaration.
	* lib/comdlg32.def (PrintDlgEx[AW]): Add function stubs.
	* ChangeLog: Fix typo in last entry.
	

2001-11-01  TAMURA Kent  <tkent@users.sourceforge.net>

	* include/objbase.h (CoGetClassObject): Change third parameter
	to COSERVERINFO*.

2001-10-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (MOUSEEVENTF_WHEEL): Define.
	Thanks to: Kim Saunders.
	* include/oleauto.h: Define VARIANT* flags for VariantChangeType.
	Thanks to: Pat Thoyts.
	* include/winnt.h: Change C++ style comment to C style.
 	* include/shlobj.h: Ditto.
	* include/objbase.h (enum tagCOINIT): Remove comma at end of
	list.
	* include/oledlg.h (enum tagOLEUIPASTEFLAG): Ditto.